fix: users notification and category watching_first_post option

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -19,4 +19,5 @@ plugins:
         choices:
             - 'watching'
             - 'tracking'
+            - 'watching_first_post'
             - 'normal'
